@startuml

title __AUTOML's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace automl {
      class jp.oist.abcvlib.camera.automl.AutoMLImageLabelerProcessor {
          {static} - TAG : String
          - imageLabeler : ImageLabeler
          + AutoMLImageLabelerProcessor()
          + stop()
          # detectInImage()
          # onFailure()
          # onSuccess()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace automl {
      class jp.oist.abcvlib.camera.automl.LabelGraphic {
          {static} - LABEL_FORMAT : String
          {static} - TEXT_SIZE : float
          - labelPaint : Paint
          - labels : List<ImageLabel>
          - textPaint : Paint
          + LabelGraphic()
          + draw()
      }
    }
  }
  

  jp.oist.abcvlib.camera.automl.AutoMLImageLabelerProcessor -up-|> jp.oist.abcvlib.camera.VisionProcessorBase
  jp.oist.abcvlib.camera.automl.LabelGraphic -up-|> jp.oist.abcvlib.camera.GraphicOverlay.Graphic
  jp.oist.abcvlib.camera.automl.LabelGraphic o-- jp.oist.abcvlib.camera.GraphicOverlay : overlay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
